# kaoda-review

./: .gitignore  AGENTS.md  CLAUDE.md  MANIFEST.in  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
assets/exam-template/: index.html
references/: intake_and_research.md  mistake_taxonomy.md  quality_gates.md  question_design.md  rubrics.md  source_ingestion.md  weekly_review.md
scripts/: __init__.py  kaoda.py
tests/: pressure_scenarios.json  test_kaoda.py
tests/fixtures/: sample.srt  sample_text.txt
